using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class TagManager
{
    public static string HORIZONTAL_AXIS = "Horizontal";
    public static string JUMP_BUTTON = "Jump";

    public static string PLAYER_IS_GROUND_PARAMETR = "isGround";
    public static string PLAYER_SPEED_PARAMETR = "speed";
    public static string PLAYER_VELOCITY_Y_PARAMETR = "yVel";
    public static string KNIFE_ATTACK_TRIGGER = "KnifeAttack";
    public static string FIRST_PLAYER_TAG = "Player1";
    public static string SECOND_PLAYER_TAG = "Player2";
    public static string KNIFE_TAG = "Knife";

    public static string MAIN_MENU_SCENE_NAME = "MainMenu";
    public static string CHOSE_LEVEL_SCENE_NAME = "ChooseLevel";
    public static string ARENA1_LEVEL_NAME = "Arena1";
    public static string ARENA2_LEVEL_NAME = "Arena2";
    public static string ARENA3_LEVEL_NAME = "Arena3";
    public static string ARENA4_LEVEL_NAME = "Arena4";

    public static string PLAY_DEAD_ANIM = "Dead";
}
